config: added netlify.toml

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ body {
   font-weight: 500;
 }
 
-.btn-lightBlue {
+.bg-lightBlue {
   background-color: rgba(219, 237, 240, 1) !important;
   font-weight: 500 !important;
 }
